--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^6.1.0",
+  "dependencies": {
+    "@sveltejs/adapter-vercel": "^5.10.2",
     "@sveltejs/kit": "^2.39.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "svelte": "^5.38.10",
     "vite": "^7.1.5"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^6.1.0"
   }
 }
