--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
+  "installCommand": "npm install",
   "buildCommand": "npm run build",
-  "outputDirectory": ".svelte-kit/output",
-  "framework": "sveltekit",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ]
+  "outputDirectory": ".svelte-kit"
 }
