--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "@sveltejs/adapter-vercel": "^5.10.2",
     "@sveltejs/kit": "^2.39.1",
