--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite dev",
-    "build": "npx vite build",
+    "build": "node node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,13 +17,11 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@sveltejs/adapter-auto": "^6.1.0",
     "@sveltejs/adapter-vercel": "^5.10.2",
     "@sveltejs/kit": "^2.39.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "svelte": "^5.38.10",
     "vite": "^7.1.5"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^6.1.0"
   }
 }
